k8s/sdc-agents/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdc-agents
  namespace: sdc
spec:
  selector:
    app: sdc-agents
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
  type: NodePort
